--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,13 @@
   <body ng-app="gcloud">
     <nav>
       <li><a href="#/">Home</a></li>
+      <li><a href="#/files">Files</a></li>
       <li><a href="#/users">Users</a></li>
     </nav>
     <main ng-view></main>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="bower_components/angular-file-upload/dist/angular-file-upload.js"></script>
     <script src="js/gcloud.js"></script>
   </body>
 </html>
